sumo/tests/traci/VariableRetrieval/Edge/errors/UnknownID/testclient.prog
simstep 5 1
getvariable 0xaa 0x59 xxx
simstep 6 1
